--- a/pom.xml
+++ b/pom.xml
@@ -94,12 +94,15 @@
 
     <repositories>
         <repository>
-            <id>war-repo</id>
-            <url>http://ci.tommytony.com/plugin/repository/everything/</url>
-        </repository>
-        <repository>
-            <id>sponge-repo</id>
-            <url>http://repo.spongepowered.org/Sponge/maven/</url>
+            <id>sponge-maven-repo</id>
+            <name>Sponge maven repo</name>
+            <url>http://repo.spongepowered.org/maven</url>
+            <releases>
+                <enabled>true</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
         </repository>
     </repositories>
 
@@ -113,7 +116,8 @@
         <dependency>
             <groupId>org.spongepowered</groupId>
             <artifactId>spongeapi</artifactId>
-            <version>1.0</version>
+            <version>2.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>org.xerial</groupId>
