Implement War for Bukkit
@kugick

Notes:
- Warzone now keeping track of ancient data values (for Bukkit's sake)
- Zone files are not compatible between servers
- The command files are mostly identical (more abstraction is possible)

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>war-core</module>
         <module>war-sponge</module>
+        <module>war-bukkit</module>
     </modules>
 
     <name>War</name>
