--- a/pom.xml
+++ b/pom.xml
@@ -59,7 +59,7 @@
         <developer>
             <id>kugick</id>
             <name>Samuel Collin</name>
-            <email>samuel.live.collin@gmail.com</email>
+            <email>contact@kugick.net</email>
             <url>http://kugick.net</url>
             <roles>
                 <role>programmer</role>
